# flask-application-template

./: .gitignore  Dockerfile  README.md  pyproject.toml  start.sh
app/: __init__.py
app/api/: health_check.py
app/extensions/: logger.py
scripts/: docker.py  pytest.py
tests/: conftest.py
tests/functional/: test_health_check.py
