[tool.poetry]
name = "flask-application-template"
version = "0.1.2"
description = "This application is a model of how to implement tools and extensions for Flask"
authors = []

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
autopep8 = "^1.6.0"
httpie = "^3.1.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
