[tool.poetry]
name = "app"
version = "0.1.2"
description = "This application is a model of how to implement tools and extensions for Flask"
authors = []

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
autopep8 = "^1.6.0"
httpie = "^3.1.0"

[tool.poetry.scripts]
docker-build = "scripts.docker:docker_build"
docker-run = "scripts.docker:docker_run"
docker-stop = "scripts.docker:docker_stop"
docker-rm = "scripts.docker:docker_delete"
pytest-cov = "scripts.pytest:run_tests_with_coverage"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
